--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                         <div class="mt-2 text-sm text-center">
                             <p>完了人数: <span id="answered-count" class="font-bold text-2xl">0</span> / <span
                                     id="active-count" class="font-bold">0</span></p>
-                            <p class="text-xs opacity-75">全員終わると自動で終了します</p>
+                            <p class="text-xs opacity-75">全員完了後、自動で結果発表へ進みます</p>
                         </div>
                         <button onclick="forceEndChance()"
                             class="mt-4 bg-white text-pink-500 px-4 py-2 rounded-full text-xs font-bold shadow hover:bg-gray-100">
@@ -550,6 +550,7 @@
         let currentRoomChanceId = null; // Store for checking completion
         let scoreViewTill = 0; // Timestamp when minimum score viewing time ends
         let isProcessingChance = false; // Prevent double submission/freeze
+        let chanceTimerId = null; // Timer ID for master timeout
 
         const MAX_NUMBER = 50;
         const CHANCE_INTERVAL = 3;
@@ -853,10 +854,15 @@
 
         window.triggerChanceTime = async () => {
             if (!isMaster) return;
+            // Clear existing timeout if any
+            if (chanceTimerId) clearTimeout(chanceTimerId);
+
             const emotion = EMOTIONS[Math.floor(Math.random() * EMOTIONS.length)];
             const chanceId = Date.now().toString();
 
-            const DURATION = 30000;
+            // 変更: 時間制限を実質撤廃（5分 = 300秒）
+            // これにより、全員が送信し終わるまでゲームが待つようになります。
+            const DURATION = 300000;
 
             await api.updateDoc(api.doc('rooms', currentRoomId), {
                 chanceActive: true,
@@ -865,12 +871,15 @@
                 chanceId: chanceId,
                 chanceEndsAt: Date.now() + DURATION
             });
-            setTimeout(() => endChanceTime(), DURATION + 2000);
+
+            // Set safety timeout
+            chanceTimerId = setTimeout(() => endChanceTime(), DURATION + 2000);
         };
         window.forceEndChance = () => endChanceTime();
 
         async function endChanceTime() {
             if (!isMaster) return;
+            if (chanceTimerId) { clearTimeout(chanceTimerId); chanceTimerId = null; }
 
             const roomRef = api.doc('rooms', currentRoomId);
             const roomSnap = await api.getDoc(roomRef);
@@ -1000,88 +1009,100 @@
             let photoData = null;
             let score = 0;
 
-            if (isCamera) {
-                const video = document.getElementById('camera-feed');
-                const canvas = document.getElementById('camera-canvas');
+            try {
+                if (isCamera) {
+                    const video = document.getElementById('camera-feed');
+                    const canvas = document.getElementById('camera-canvas');
 
-                // Capture Photo
-                canvas.width = 300;
-                canvas.height = 300 * (video.videoHeight / video.videoWidth);
-                const ctx = canvas.getContext('2d');
-                ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-                photoData = canvas.toDataURL('image/jpeg', 0.5);
+                    // Capture Photo
+                    canvas.width = 300;
+                    canvas.height = 300 * (video.videoHeight / video.videoWidth);
+                    const ctx = canvas.getContext('2d');
+                    ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+                    photoData = canvas.toDataURL('image/jpeg', 0.5);
 
-                // Simulate "Thinking" time for 1.5s
-                await new Promise(r => setTimeout(r, 1500));
+                    // Simulate "Thinking" time for 1.5s
+                    await new Promise(r => setTimeout(r, 1500));
 
-                // AI Analysis (Real values)
-                let detectionScore = 0;
-                try {
-                    const detection = await faceapi.detectSingleFace(video, new faceapi.TinyFaceDetectorOptions()).withFaceExpressions();
+                    // AI Analysis (Real values)
+                    let detectionScore = 0;
+                    try {
+                        const detection = await faceapi.detectSingleFace(video, new faceapi.TinyFaceDetectorOptions()).withFaceExpressions();
 
-                    if (detection) {
-                        const expressions = detection.expressions;
-                        const targetKey = currentEmotionTargetKey || 'happy';
-                        const probability = expressions[targetKey] || 0;
+                        if (detection) {
+                            const expressions = detection.expressions;
+                            const targetKey = currentEmotionTargetKey || 'happy';
+                            const probability = expressions[targetKey] || 0;
 
-                        // Raw Probability Score (0-100)
-                        let rawScore = Math.floor(probability * 100);
+                            // Raw Probability Score (0-100)
+                            let rawScore = Math.floor(probability * 100);
 
-                        // Mild Boost (1.1x) + Small Randomness
-                        detectionScore = Math.min(100, Math.floor(rawScore * 1.1) + Math.floor(Math.random() * 6));
+                            // Mild Boost (1.1x) + Small Randomness
+                            detectionScore = Math.min(100, Math.floor(rawScore * 1.1) + Math.floor(Math.random() * 6));
 
-                        console.log(`Emotion: ${targetKey}, Prob: ${probability}, Raw: ${rawScore}, Final: ${detectionScore}`);
+                            console.log(`Emotion: ${targetKey}, Prob: ${probability}, Raw: ${rawScore}, Final: ${detectionScore}`);
+                        }
+                    } catch (e) { console.error("AI Detect Error", e); }
+
+                    if (videoStream) videoStream.getTracks().forEach(track => track.stop());
+
+                    // Score Logic
+                    if (detectionScore > 0) {
+                        // Success: Guarantee at least 60 points if face is detected
+                        // Range: 60 - 100
+                        score = Math.max(60, detectionScore);
+                    } else {
+                        // Fail (No face / Wrong expression): 20 - 50 Random
+                        score = Math.floor(Math.random() * 31) + 20;
                     }
-                } catch (e) { console.error("AI Detect Error", e); }
 
-                if (videoStream) videoStream.getTracks().forEach(track => track.stop());
-
-                // Score Logic
-                if (detectionScore > 0) {
-                    // Success: 10 - 100 (Based on AI)
-                    score = Math.max(10, detectionScore);
                 } else {
-                    // Fail (No face / Wrong expression): 20 - 50 Random
-                    score = Math.floor(Math.random() * 31) + 20;
+                    // Manual mash score
+                    await new Promise(r => setTimeout(r, 1000));
+                    score = Math.min(80, Math.floor(mashCounter * 4) + Math.floor(Math.random() * 10));
                 }
 
-            } else {
-                // Manual mash score
-                await new Promise(r => setTimeout(r, 1000));
-                score = Math.min(80, Math.floor(mashCounter * 4) + Math.floor(Math.random() * 10));
-            }
-
-            // 2. SHOW SCORE OVERLAY (3 Seconds)
-            document.getElementById('camera-status').classList.add('hidden');
-            if (isCamera) {
-                document.getElementById('my-score-value').innerText = score;
-                document.getElementById('my-score-overlay').classList.remove('hidden');
-            } else {
-                document.getElementById('manual-score-value').innerText = score;
-                document.getElementById('manual-score-overlay').classList.remove('hidden');
-            }
-
-            // Set global timer for when this view should close
-            scoreViewTill = Date.now() + 3000;
-
-            // SEND DATA IMMEDIATELY (Background)
-            const roomSnap = await api.getDoc(api.doc('rooms', currentRoomId));
-            const chanceId = roomSnap.data().chanceId;
-
-            await api.updateDoc(api.doc('rooms', currentRoomId, 'players', authUser.uid), {
-                lastChanceId: chanceId,
-                lastChanceScore: score,
-                lastChancePhoto: photoData
-            });
-
-            // Wait 3s then check if we need to show waiting msg
-            setTimeout(() => {
-                if (!document.getElementById('camera-modal').classList.contains('hidden')) {
-                    // Only show waiting if master hasn't closed it yet
-                    document.getElementById('my-score-msg').innerText = "他のプレイヤーを待っています...";
-                    document.getElementById('manual-score-overlay').querySelector('p:last-child').innerText = "他のプレイヤーを待っています...";
+                // 2. SHOW SCORE OVERLAY (3 Seconds)
+                document.getElementById('camera-status').classList.add('hidden');
+                if (isCamera) {
+                    document.getElementById('my-score-value').innerText = score;
+                    document.getElementById('my-score-overlay').classList.remove('hidden');
+                } else {
+                    document.getElementById('manual-score-value').innerText = score;
+                    document.getElementById('manual-score-overlay').classList.remove('hidden');
                 }
-            }, 3000);
+
+                // Set global timer for when this view should close
+                scoreViewTill = Date.now() + 3000;
+
+                // SEND DATA IMMEDIATELY (Background)
+                const roomSnap = await api.getDoc(api.doc('rooms', currentRoomId));
+                if (roomSnap.exists()) {
+                    const chanceId = roomSnap.data().chanceId;
+
+                    await api.updateDoc(api.doc('rooms', currentRoomId, 'players', authUser.uid), {
+                        lastChanceId: chanceId,
+                        lastChanceScore: score,
+                        lastChancePhoto: photoData
+                    });
+                }
+
+                // Wait 3s then check if we need to show waiting msg
+                setTimeout(() => {
+                    if (!document.getElementById('camera-modal').classList.contains('hidden')) {
+                        // Only show waiting if master hasn't closed it yet
+                        document.getElementById('my-score-msg').innerText = "他のプレイヤーを待っています...";
+                        if (document.getElementById('manual-score-overlay').querySelector('p:last-child')) {
+                            document.getElementById('manual-score-overlay').querySelector('p:last-child').innerText = "他のプレイヤーを待っています...";
+                        }
+                    }
+                }, 3000);
+
+            } catch (error) {
+                console.error("Error in submitScore:", error);
+                // Fallback exit
+                document.getElementById('camera-modal').classList.add('hidden');
+            }
         }
 
         // --- BINGO LOGIC ---
